--- a/renderer/order.html
+++ b/renderer/order.html
@@ -1,12 +1,99 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Order</title>
+    <title>Dashboard</title>
+    <link rel="stylesheet" href="../bower_components/bulma/css/bulma.css">
+    <link rel="stylesheet" href="../bower_components/bulma/css/">
+    <link rel="stylesheet" href="../bower_components/font-awesome/css/font-awesome.min.css">
+    <link rel="stylesheet" href="./css/main.css">
 </head>
-<body>
 
+<body>
+    <section class="section">
+        <div class="card">
+            <header class="card-header">
+                <p class="card-header-title">
+                    Add bill
+                </p>
+                <a href="#" class="card-header-icon" aria-label="more options">
+                    <span class="icon">
+                        <i class="fa fa-angle-down" aria-hidden="true"></i>
+                    </span>
+                </a>
+            </header>
+            <div class="card-content">
+                <div class="content">
+                    <div class="container">
+                        <div class="field">
+                            <p class="control has-icons-left">
+                                <span class="select">
+                                    <select>
+                                        <option selected>Table No</option>
+                                        <option>1</option>
+                                        <option>2</option>
+                                        <option>3</option>
+                                    </select>
+                                </span>
+                                <span class="icon is-small is-left">
+                                    <i class="fa fa-braille"></i>
+                                </span>
+                            </p>
+                        </div>
+                    </div>
+                    <br>
+                    <br>
+
+                    <div class="container">
+                        <div class="columns">
+                            <div class="box" style="width: 500px;">
+                                <div class="column is-two-fifths">
+                                    <strong>Straberry ice-cream</strong>
+                                </div>
+                            </div>
+                            <div class="box" style="width: 500px;">
+                                    <label for="example-number-input">Quantity</label>
+                                    <input type="number" value="42" id="example-number-input">
+                            </div>
+                            <div class="column">
+                                <a class="button is-info is-large is-outlined">
+                                    Remove
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="container">
+                            <div class="columns">
+                                <div class="box" style="width: 500px;">
+                                    <div class="column is-two-fifths">
+                                        <strong>Straberry ice-cream</strong>
+                                    </div>
+                                </div>
+                                <div class="box" style="width: 500px;">
+                                        <label for="example-number-input">Quantity</label>
+                                        <input type="number" value="42" id="example-number-input">
+                                </div>
+                                <div class="column">
+                                    <a class="button is-info is-large is-outlined">
+                                        Remove
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+
+                </div>
+            </div>
+            <footer class="card-footer">
+                <a href="#" class="card-footer-item">Save</a>
+                <a href="#" class="card-footer-item">Edit</a>
+                <a href="#" class="card-footer-item">Delete</a>
+            </footer>
+        </div>
+
+    </section>
 </body>
+
 </html>
