--- a/renderer/main.html
+++ b/renderer/main.html
@@ -7,7 +7,6 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Dashboard</title>
   <link rel="stylesheet" href="../bower_components/bulma/css/bulma.css">
-  <link rel="stylesheet" href="../bower_components/bulma/css/">
   <link rel="stylesheet" href="../bower_components/font-awesome/css/font-awesome.min.css">
   <link rel="stylesheet" href="./css/main.css">
 </head>
@@ -72,7 +71,7 @@
     <div class="container">
         <div class="columns">
         <div class="box" id="style-button">
-            <h3><a href=# id="add-item">Add</a></h3>
+            <h3><a href="order.html" id="add-item">Add</a></h3>
           </div>
           </div>
     </div>
@@ -85,9 +84,8 @@
     $ = require('jquery')
 
     // main app script
-    app = require('./js/app.js')
+    require('./js/app.js')
 
-    console.log(localStorage.length)
   </script>
 </body>
 
