--- a/renderer/order.html
+++ b/renderer/order.html
@@ -7,7 +7,6 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Dashboard</title>
     <link rel="stylesheet" href="../bower_components/bulma/css/bulma.css">
-    <link rel="stylesheet" href="../bower_components/bulma/css/">
     <link rel="stylesheet" href="../bower_components/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="./css/main.css">
 </head>
@@ -94,6 +93,15 @@
         </div>
 
     </section>
+
+    <script>
+        //jquery
+        $ = require('jquery')
+    
+        // main app script
+        require('./js/order.js')
+        
+      </script>
 </body>
 
 </html>
